wip(HTML/Hard/2)[fix-ui]: benerin header biar ada gapnya

--- a/HTML Dasar/Easy/2-tugas/css/main.css
+++ b/HTML Dasar/Easy/2-tugas/css/main.css
@@ -34,6 +34,10 @@ body {
   text-transform: uppercase;
   text-align: left;
 }
+.table__header tr {
+  display: flex;
+  gap: 16px;
+}
 .table__header th:not(:last-child) {
   width: 200px;
 }
