--- a/CSS Dasar/Hard/3-tugas/scss/main.scss
+++ b/CSS Dasar/Hard/3-tugas/scss/main.scss
@@ -36,7 +36,6 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: red;
 
     &:hover .nav__submenu {
       visibility: visible;
@@ -49,8 +48,8 @@ body{
     background-color: #fff;
     border-radius: 8px;
     z-index: -1;
-    // visibility: hidden;
-    // opacity: 0;
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     transition:.4s ease;
     top: 0%;
