--- a/CSS Dasar/Hard/3-tugas/css/main.css
+++ b/CSS Dasar/Hard/3-tugas/css/main.css
@@ -35,7 +35,6 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: red;
 }
 .nav__dropdown:hover .nav__submenu {
   visibility: visible;
@@ -46,6 +45,8 @@ body {
   background-color: #fff;
   border-radius: 8px;
   z-index: -1;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   transition: 0.4s ease;
   top: 0%;
