--- a/CSS Grid/Hard/1-tugas/scss/main.scss
+++ b/CSS Grid/Hard/1-tugas/scss/main.scss
@@ -46,19 +46,34 @@
   &__timeline{
     padding: 12px;
     color: white;
-    @for $i from 1 through 3{
-      &--1-#{$i}{
-        background-color: blue;
-      }
-      &--2-#{$i}{
-        background-color: green;
-      }
-      &--3-#{$i}{
-        background-color: purple;
-      }
-      &--4-#{$i}{
-        background-color: orange;
-      }
+    border-radius: 4px;
+    box-shadow: 4px 4px 0px 0px #C6C6C6;
+
+    h4{
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 20px;
+      letter-spacing: -0.8px;
+      position: relative;
+      margin-bottom: 2px;
+      display: inline-block;
+    }
+
+    h4::before{
+      content: '';
+      position: absolute;
+      top: 100%;
+      height: 1px;
+      left: 0;
+      width: 100%;
+      border-top: 1px dashed white;
+    }
+
+    p{
+      font-size: 16px;
+      line-height: 20px;
+      letter-spacing: -0.8px;
+      opacity: .9;
     }
 
     &--1-1{
@@ -108,11 +123,28 @@
       grid-column: 5 / 6;
       grid-row: 7 / 8;
     }
-
+    
+    @for $i from 1 through 3{
+      &--1-#{$i}{
+        background-color: #1259B2;
+      }
+      &--2-#{$i}{
+        background-color: #687F00;
+      }
+      &--3-#{$i}{
+        background-color: #544D69;
+      }
+      &--4-#{$i}{
+        background-color: #C35500;
+      }
+    }
   }
 
   &__break{
-    background-color: gray;
+    border-radius: 4px;
+    background-color: #CCCCCC;
     grid-area: 6 / 2 / 7 / 6;
+    display: grid;
+    place-content: center;
   }
 }
