--- a/CSS Grid/Hard/2-tugas/css/reset.css
+++ b/CSS Grid/Hard/2-tugas/css/reset.css
@@ -31,9 +31,6 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul {
-	list-style: none;
-}
 blockquote, q {
 	quotes: none;
 }
@@ -63,4 +60,8 @@ img{
 
 button{
 	border: none;
+	cursor: pointer;
 }
+/* ol, ul {
+	list-style: none;
+} */
