--- a/Node JS/17-contact/views/add-contact.ejs
+++ b/Node JS/17-contact/views/add-contact.ejs
@@ -2,12 +2,12 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h2>Form Tambah Data Contact</h2>
-			<% if (typeof errors !== undefined) { %>
+			<% if (errors !== undefined && errors.length > 0) { %>
 			<div class="alert alert-danger" role="alert">
 				<ul>
 					<% errors.forEach(error => { %>
 					<li><%= error.msg %></li>
-					<% }) %>
+					<% }); %>
 				</ul>
 			</div>
 			<% } %>
